@@ -21,6 +21,12 @@ watchers (common):
 - Issue #6: on Python 2 the priority attribute was supposed to be an int but
   accepted only longs.
 - Unloop the loop and raise if EV_ERROR is received in callback.
+- Issue #7: fix memory leak in callback.
+
+
+Periodic:
+
+- fix memory leak in reschedule callback.
 
 
 
